# random-table-roller

./: .gitignore  Cargo.toml  LICENSE  styles.css
common-data/: Cargo.toml
common-data/src/: currency.rs  id_name_pair.rs  lib.rs  table.rs
src/: app.rs  components.rs  glue.rs  hooks.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: logging.rs  main.rs
src/components/: checkbox.rs  currency_field.rs  edit_table_modal.rs  editable_header.rs  full_page_modal.rs  menu.rs  modal.rs  number_field.rs  remove_button.rs  roll_modals.rs  select.rs  table_tabs.rs
src/hooks/: currency_state.rs  tables_hook.rs  updateable_state.rs  vec_state.rs
