[package]
name = "random-table-roller-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common-data = { path = "common-data" }
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
js-sys = "0.3"
uuid = { version = "1.3.2", features = ["v4", "js", "fast-rng", "serde", "wasm-bindgen"] }
log = "0.4.17"
wasm-logger = "0.2.0"
yew_icons = { version = "0.7.2", features = [
    "LucideMenu",
    "HeroiconsOutlineMinusCircle",
    "HeroiconsSolidMinusCircle",
    "BootstrapCaretDownFill",
    "BootstrapCaretUpFill"
]}
regex = "1.8.1"
base64 = "0.21.0"

[workspace]
members = [
    "src-tauri",
    "common-data"
]
