[package]
name = "common-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
byteorder = "1.4.3"
getrandom = { version = "0.2.9", features = ["js", "js-sys"] }
log = "0.4.17"
rand = { version = "0.8.5", default-features = false, features = ["alloc", "libc", "rand_chacha", "std", "std_rng"]}
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4", "js", "fast-rng", "serde", "wasm-bindgen"] }
